--- a/src/app/features/components/test.component.html
+++ b/src/app/features/components/test.component.html
@@ -65,6 +65,14 @@
           <p class="card-text">{{datafosfati | date }}</p>
         </div>
       </div>
+      <div class="card colored-cards">
+          <div class="card-body text-center">
+            <h6 class="card-title">
+              <strong>Conducibilità</strong>
+            </h6>
+            <p class="card-text">{{dataec | date }}</p>
+          </div>
+        </div>
     </div>
   </div>
   <hr>
@@ -140,6 +148,11 @@
           {{row.test.fomin}} - {{row.test.fomax}}
         </ng-template>
       </ngx-datatable-column>
+      <ngx-datatable-column name="Conducibilità">
+          <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+            {{row.test.ec}}
+          </ng-template>
+        </ngx-datatable-column>
     </ngx-datatable>
   </div>
 </div>
